# stackist

./: .gitignore  README.md  stackist.cabal
docs/: thoughts_on_fold.md
src/: Main.hs  Main.lhs
src/Stackist/: Interpreter1.hs  Parser.hs  Parser.old
