Name:                stackist
Version:             0.1
Description:         Interpreter and Compiler for the stackist programming language
License-file:        LICENSE
copyright:           (c) 2012 Steve Jenson
Author:              Steve Jenson
Maintainer:          stevej@fruitless.org
Build-Type:          Simple
Cabal-Version:       >=1.10

source-repository head
  type: git
  location: https://github.com/stevej/stackist

Library
  Default-Language:  Haskell2010
  Hs-source-dirs:    src
  Exposed-Modules:   Stackist.Interpreter1
  Build-Depends:
    base        >= 4      && < 5,
    containers  >= 0.3    && < 1.0,
    mtl         >= 1      && < 3.0,
    parsec      >= 2.1    && < 3.2

Executable stackist
  Main-is:           Main.lhs
  Hs-source-dirs:    src
  Default-Language:  Haskell2010
  Build-Depends:
    base >= 3 && < 5,
    containers  >= 0.3    && < 1.0,
    stackist

-- Verify the results of the examples
Test-suite doctests
  Default-Language:  Haskell2010
  Type:    exitcode-stdio-1.0
  Main-is: doctests.hs
  Build-depends:
    base == 4.*,
    directory >= 1.0 && < 1.2,
    doctest >= 0.8 && <= 0.9,
    filepath >= 1.3 && < 1.4
  ghc-options: -Wall -Werror -threaded
  hs-source-dirs: tests
